--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
